--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shubham Jangid-Web Developer-Photographer</title>
 
-    <link rel="shortcut icon" href="fevi/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
